# kicad-allegro

pcbnew/: CMakeLists.txt  io_mgr.cpp  io_mgr.h
pcbnew/plugins/allegro/: CMakeLists.txt  allegro_elem_parsers.h  allegro_file.cpp  allegro_file.h  allegro_parser.h  allegro_pcb.cpp  allegro_pcb.h  allegro_plugin.cpp  allegro_plugin.h  allegro_structs.h
